<resources>
    <string name="app_name">SkillBarter</string>

    <!-- Types of domains in the technion -->
    <string name="choose_domain">Choose domain</string>

    <string name="collection_user_data">User Data</string>

    <string name="collection_user_skills">User Skills</string>
    <string name="collection_user_skill_reviews">Skill Reviews</string>
    <string name="userData_userID_key">userID</string>

    <!-- SCREEN TITLES -->
    <string name="search_result_title">Search Results</string>
    <string name="service_result_title">Service Details</string>
    <string name="new_date_title">Add Available Time</string>
    <string name="available_dates_manager_title">Your Available Dates</string>
    <string name="user_home_profile_title">Your Details</string>

    <string name="dates_spinner_prompt">Choose date and starting time</string>



    <!--USER DATA KEYS-->
    <string name="userData_profilePictureURL_key">profilePictureURL</string>
    <string name="userData_dateOfBirth_key">dateOfBirth</string>
    <string name="userData_firstName_key">firstName</string>
    <string name="userData_lastName_key">lastName</string>
    <string name="userData_phoneNumber_key">phoneNumber</string>
    <string name="userData_address_key">address</string>
    <string name="userData_email_key">email</string>
    <string name="userData_gender_key">gender</string>
    <string name="userData_pointsBalance_key">pointsBalance</string>
    <string name="userData_personalRating_key">personalRating</string>
    <string name="userData_numOfRatings_key">numOfRatings</string>
    <string name="userSkill_skillId_key">skillId</string>

    <!--USER SKILL KEYS-->
    <string name="userSkill_userID_key">userID</string>
    <string name="userSkill_category_key">category</string>
    <string name="userSkill_skill_key">skill</string>
    <string name="userSkill_pointsValue_key">pointsValue</string>
    <string name="userSkill_level_key">level</string>
    <string name="review_reviewerName_key">reviewerName</string>

    <!--REVIEW KEYS-->
    <string name="review_reviewerPicture_key">reviewerPicture</string>
    <string name="review_dateOfReview_key">dateOfReview</string>
    <string name="review_rank_key">rank</string>
    <string name="review_details_key">details</string>
    <string name="user_information_title">User Information</string>


    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_birthday">Birthday</string>
    <string name="user_phone_number">Phone number</string>
    <string name="phone_mask">###-###-####</string>
    <string name="user_address">Address</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="photo_request">Please attach recent and recognizable photo of yourself</string>
    <string name="send_verification_email">Send Email Verification Again</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="up_next">Up Next:</string>
    <string name="search_button">Search</string>
    <string name="distance_section">Distance From Me:</string>
    <string name="max_distance">Maximal Distance</string>

    <!--SEARCH ENGINE-->
    <string name="km">Km</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="point_limit_title">Limit By Points:</string>
    <string name="clock_image_description">Time picker</string>
    <string name="points_image_description">Points icon</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="skill">SKILL:</string>
    <string name="level">LEVEL:</string>

    <!--SEARCH ITEM DETAILS-->
    <string name="details">DETAILS:</string>
    <string name="location">Location:</string>
    <string name="review">Reviews:</string>
    <string name="booking_button">Book Now</string>
    <string name="add_skill_title">Add New Skill:</string>
    <string name="edit_skill_title">Edit Skill:</string>

    <!--FILTER DIALOG-->
    <string name="filter_header" translatable="false">Filter</string>
    <string name="all_categories" translatable="false">All Categories</string>
    <string name="sorted_by_category" translatable="false">sorted by category</string>
    <string name="sorted_by_points" translatable="false">sorted by points</string>
    <string name="sorted_by_level" translatable="false">sorted by level</string>
    <string name="sort_by_category" translatable="false">Sort by Category</string>
    <string name="sort_by_points" translatable="false">Sort by Points</string>
    <string name="sort_by_level" translatable="false">Sort by Level</string>
    <string name="value_any_category" translatable="false">All Categories</string>
    <string name="value_any_skill" translatable="false">All Skills</string>
    <string name="value_any_points">Any Value of Points</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="apply" translatable="false">Apply</string>

    <string name="price_1">$ (maximum 20 points)</string>
    <string name="price_2">$$ (maximum 50 points)</string>
    <string name="price_3">$$$ (maximum 100 points)</string>



    <!--ADD SKILL-->
    <string name="skill_level_title">How good are you:</string>
    <string name="skill_details_hint">Tell us a bit more about your skill...</string>
    <string name="skill_points_title">Skill Value:</string>
    <string name="points">Points</string>
    <string name="skill_address_title">Address of service:</string>
    <string name="skill_address">Specify the address of service</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <!--ADD AVAILABLE DATES-->
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="time_hint">HH:MM</string>


    <!--AUTHENTICATION-->
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="no_dates_message">Sorry, no available dates for this service</string>
    <string name="no_appointments_message">No upcoming appointments for you</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>

    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>

    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>




    <string name="divider_bullet" translatable="false">•</string>
    <string-array name="domains">
        <item>\@campus.technion.ac.il</item>
        <item>\@ee.technion.ac.il</item>
        <item>\@technion.ac.il</item>
    </string-array>

    <string-array name="genders">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>

    <!-- TOAST RELATED-->
    <string name="error_toast">Error occurred! </string>
    <string name="missing_profile_picture_toast">You must set profile picture</string>
    <string name="date_already_exists_message">This time slot already exists</string>
    <string name="date_not_chosen_message">"You must choose date and starting time"</string>
    <string name="missing_points_message">"You don\'t have enough points"</string>
    <string name="appointment_created_message">"New appointment is set!"</string>

</resources>
