<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    android:weightSum="4">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center_horizontal"
    android:paddingTop="100dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:id="@+id/domainsSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/domains">
        </Spinner>
    </LinearLayout>

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

</LinearLayout>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/emailSignInButton"
            android:background="@drawable/my_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:layout_marginEnd="25dp"
            android:onClick="onSignInClicked"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:background="@drawable/my_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:onClick="onCreateAccountClicked"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verifyAccountTextView"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/linkBlue"
        android:text="@string/send_verification_email"
        tools:visibility="visible"/>

</LinearLayout>