<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/register_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/user_information_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_page_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_title"
        app:layout_constraintTop_toTopOf="parent">

        <!--Input First Name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_first_name" />
        </android.support.design.widget.TextInputLayout>

        <!--Input Last Name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_last_name" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight=".70"
            app:layout_constraintEnd_toStartOf="@+id/date_picker"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/user_birthday" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/date_picker"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/calendar_icon"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3" />


        <!--Gender Radio Button-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <RadioGroup
                android:id="@+id/gender_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>

        <!--Input Phone Number-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.santalu.maskedittext.MaskEditText
                android:id="@+id/input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789+"
                android:hint="@string/user_phone_number"
                android:inputType="phone"
                app:met_mask="@string/phone_mask" />
        </android.support.design.widget.TextInputLayout>

        <!--Input Address-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_address" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_prev"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/prev_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_next"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="@+id/button_prev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_prev" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_page_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_page_title"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/photo_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/profile_picture_holder"
            android:layout_width="400px"
            android:layout_height="400px"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/incognito"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <!--Gallery Icon Button-->
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/button_gallery"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/gallery_icon"
            app:layout_constraintStart_toStartOf="@+id/profile_picture_holder"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_holder" />

        <!--Camera Icon Button-->
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/button_camera"
            android:layout_width="150px"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:background="@drawable/device_camera_icon"
            app:layout_constraintBottom_toBottomOf="@+id/button_gallery"
            app:layout_constraintEnd_toEndOf="@+id/profile_picture_holder"
            app:layout_constraintTop_toTopOf="@+id/button_gallery" />

        <Button
            android:id="@+id/button_prev2"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/prev_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_save"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="@+id/button_prev2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_prev2" />

    </android.support.constraint.ConstraintLayout>




</android.support.constraint.ConstraintLayout>