<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchEngineActivity">

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="264dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/skills_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/category_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/points_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/point_limit_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/skills_spinner" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/points_min_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/points_min_icon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/category_spinner"
        app:layout_constraintTop_toBottomOf="@+id/points_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/points_min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/points_image_description"
            android:hint="@string/min" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/points_min_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:background="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/points_min_wrapper"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/points_max_wrapper"
        app:layout_constraintStart_toEndOf="@+id/points_min_wrapper"
        app:layout_constraintTop_toTopOf="@+id/points_min_wrapper" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/points_max_wrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/points_min_wrapper"
        app:layout_constraintEnd_toStartOf="@+id/points_max_icon"
        app:layout_constraintStart_toEndOf="@id/points_min_icon"
        app:layout_constraintTop_toTopOf="@+id/points_min_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/points_max"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/max" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/points_max_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:background="@drawable/star_icon"
        android:contentDescription="@string/clock_image_description"
        app:layout_constraintBottom_toBottomOf="@+id/points_min_wrapper"
        app:layout_constraintTop_toTopOf="@+id/points_min_wrapper"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/category_spinner"
        app:layout_constraintStart_toEndOf="@+id/points_max_wrapper"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="10dp"
        android:text="@string/search_button"
        android:background="@drawable/my_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
